<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".profile">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/sign_out_button"
        android:drawablePadding="8dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/sign_out"
        android:textColor="#FF3B30"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/user_image"
            android:src="@drawable/add_user"
            app:tint="@color/grey" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_another_account"
            android:textColor="#000000"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/arrow_icon"
            android:src="@drawable/right_arrow" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/help_button"
            android:src="@drawable/help"
            app:tint="@color/grey" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/help_center"
            android:textColor="#000000"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/arrow_icon1"
            android:src="@drawable/right_arrow" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/user_imgage"
            android:src="@drawable/user"
            app:tint="@color/grey" />

        <TextView
            android:layout_width="0dp"
            android:id="@+id/tvPersonalData"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Personal Data"
            android:textColor="#000000"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="24dp"
            android:id="@+id/ivArrowPersonalData"
            android:layout_height="24dp"
            android:contentDescription="Arrow Icon"
            android:src="@drawable/right_arrow" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/settings"
            app:tint="@color/grey" />

        <TextView
            android:layout_width="0dp"
            android:id="@+id/setting"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Settings"
            android:textColor="#000000"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/setting_icon"
            android:contentDescription="Arrow Icon"
            android:src="@drawable/right_arrow" />
    </LinearLayout>
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="#BDBDBD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/tvOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Profile Settings"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/tvOtp"
        app:layout_constraintStart_toStartOf="@+id/tvOtp"
        app:layout_constraintTop_toBottomOf="@+id/tvOtp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ovalImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/oval_background"
            android:scaleType="centerCrop"
            android:src="@drawable/profile"
            tools:targetApi="31" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="4dp"
            android:background="@drawable/circle_white_bg"
            android:padding="4dp"
            android:src="@drawable/camera"
            app:tint="@color/orange" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="The 7th Bite"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

    </TextView>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:text="foodbite7@gmail.com"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14">

    </TextView>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:text="Profile"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">
    </TextView>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:text="Support"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

    </TextView>

    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:elevation="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <!-- Home (active) -->
        <LinearLayout
            android:id="@+id/navhome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/home"
                tools:ignore="UseAppTint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Home" />

        </LinearLayout>

        <!-- Search -->
        <LinearLayout
            android:id="@+id/navcart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/handbag"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cart"/>
        </LinearLayout>

        <!-- Orders -->
        <LinearLayout
            android:id="@+id/navfavourite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/favourite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Favourite" />
        </LinearLayout>

        <!-- Profile -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/user"
                app:tint="@color/orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orange"
                android:text="Profile" />
        </LinearLayout>
    </LinearLayout>

    <!-- Blur Background + Confirmation Dialog -->
    <FrameLayout
        android:id="@+id/logoutDialogOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:background="@drawable/logout_dialog_bg"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign Out"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif-light"
                android:text="Do you want to log out?"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <Button
                    android:id="@+id/btnCancelLogout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:background="@drawable/sign_out_button"
                    android:text="Cancel"
                    android:textColor="#000000" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnConfirmLogout"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="48dp"
                    android:layout_marginStart="12dp"

                    android:background="@drawable/login_button"
                    android:text="Log Out"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fullscreenPreviewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:elevation="10dp">

        <ImageView
            android:id="@+id/blurBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/fullscreenProfileImage"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:background="@drawable/oval_background" />

        <!-- Close Button -->
        <ImageView
            android:id="@+id/btnCloseFullscreen"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="top|end"
            android:layout_margin="16dp"
            android:src="@drawable/close"
            android:background="@drawable/circle_white_bg"
            android:padding="8dp"
            android:elevation="12dp" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
